@@ -6,6 +6,7 @@
 	* Disable usage of "No index" flag
 	* Check all ways to set page title in post processing hook
 	* Released version 2.1.1
+	* Fix "(no title)" for files
 
 05-11-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
